Name: FTPLine
Version: 1.4.0.0
Cabal-Version: >= 1.6
License: BSD3
License-file: license
Author: Daniel Díaz
Maintainer: Daniel Diaz (danieldiaz `at` dhelta `dot` net)
Homepage: http://dhelta.net/hprojects/FTPLine
Category: Network
Synopsis: A command-line FTP client.
Description: A command-line FTP client. Type @help@ for a list of commands.
Build-Type: Simple

Source-repository head
  type: git
  location: git://github.com/Daniel-Diaz/FTPLine.git

Executable FTPLine
  Build-depends: base == 4.*
               , mtl
               , ftphs
               , directory
               , network
               , haskeline
               , ansi-terminal
               , strict
               , bytestring
  Extensions: FlexibleInstances
  Main-is: Main.hs
